--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "videorecorder",
+  "name": "moti-electron-videorecorder",
   "description": "MOTI Chat desktop client",
   "version": "4.0.0",
   "private": true,
@@ -9,15 +9,15 @@
     "email": "isaacd.ce@gmail.com"
   },
   "build": {
-    "appId": "com.idiaz.videorecorder"
-  },  
+    "appId": "com.motiapp.electron-videorecorder"
+  },
   "main": "packages/main/dist/index.cjs",
   "scripts": {
     "build": "npm run build:main && npm run build:preload && npm run build:renderer",
     "build:main": "cd ./packages/main && vite build",
     "build:preload": "cd ./packages/preload && vite build",
     "build:renderer": "vite build",
-    "compile": "cross-env MODE=production npm run build && electron-builder build --config .electron-builder.config.cjs --dir --config.asar=true",
+    "compile": "cross-env MODE=production npm run build && electron-builder build --config .electron-builder.config.cjs --dir --config.asar=false",
     "test": "npm run test:main && npm run test:preload && npm run test:renderer && npm run test:e2e",
     "test:e2e": "npm run build && vitest run",
     "test:main": "vitest run -r packages/main --passWithNoTests",
@@ -39,22 +39,30 @@
     "@sveltejs/adapter-static": "^2.0.2",
     "@sveltejs/kit": "^1.21.0",
     "@types/cookie": "^0.5.1",
+    "@types/fluent-ffmpeg": "^2.1.21",
     "@types/node": "20.3.1",
     "@typescript-eslint/eslint-plugin": "5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
     "ably": "^1.2.41",
+    "agora-electron-sdk": "^4.2.1",
+    "agora-token": "^2.0.3",
     "canvas": "^2.11.2",
     "cross-env": "7.0.3",
     "electron": "25.1.1",
     "electron-builder": "24.4.0",
+    "electron-serve": "^1.1.0",
+    "electron-updater": "5.3.0",
     "eslint": "8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-svelte": "^2.32.2",
+    "ffmpeg-static-electron": "^2.0.3",
     "firebase": "^9.23.0",
     "happy-dom": "9.20.3",
+    "mux.js": "^6.3.0",
     "nano-staged": "0.8.0",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.1",
+    "redis": "^4.6.7",
     "simple-git-hooks": "2.8.1",
     "simplebar": "^6.2.5",
     "svelte": "^4.0.0",
@@ -63,17 +71,12 @@
     "typescript": "^5.1.6",
     "unplugin-auto-expose": "0.0.5",
     "vite": "4.3.9",
-    "vitest": "0.32.0"
+    "vitest": "0.34.2"
   },
   "dependencies": {
-    "@types/fluent-ffmpeg": "^2.1.21",
-    "agora-access-token": "^2.0.4",
-    "agora-electron-sdk": "^4.2.1",
-    "electron-rebuild": "^3.2.9",
-    "electron-updater": "5.3.0",
-    "ffmpeg-static-electron": "^2.0.3",
-    "fluent-ffmpeg": "^2.1.2",
-    "mux.js": "^6.3.0",
-    "redis": "^4.6.7"
+    "fluent-ffmpeg": "^2.1.2"
+  },
+  "agora_electron": {
+    "prebuilt": true
   }
 }
