--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build:main": "cd ./packages/main && vite build",
     "build:preload": "cd ./packages/preload && vite build",
     "build:renderer": "vite build",
-    "compile": "cross-env MODE=production npm run build && electron-builder build --config .electron-builder.config.cjs --dir --config.asar=false",
+    "compile": "cross-env MODE=production npm run build && electron-builder build --config .electron-builder.config.cjs --dir --config.asar=true",
     "test": "npm run test:main && npm run test:preload && npm run test:renderer && npm run test:e2e",
     "test:e2e": "npm run build && vitest run",
     "test:main": "vitest run -r packages/main --passWithNoTests",
@@ -56,7 +56,6 @@
     "eslint-plugin-svelte": "^2.32.2",
     "ffmpeg-static-electron": "^2.0.3",
     "firebase": "^9.23.0",
-    "fluent-ffmpeg": "^2.1.2",
     "happy-dom": "9.20.3",
     "mux.js": "^6.3.0",
     "nano-staged": "0.8.0",
@@ -75,7 +74,8 @@
   },
   "dependencies": {
     "agora-electron-sdk": "^4.2.1",
-    "electron-rebuild": "^3.2.9"
+    "electron-rebuild": "^3.2.9",
+    "fluent-ffmpeg": "^2.1.2"
   },
   "agora_electron": {
     "prebuilt": true
