--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "typescript": "^5.2.2",
     "unplugin-auto-expose": "0.0.5",
     "vite": "4.4.9",
+    "vite-plugin-external": "^4.0.1",
     "vitest": "0.34.4"
   },
   "dependencies": {
