--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "electron-updater": "5.3.0",
     "ffmpeg-static-electron": "^2.0.3",
     "fluent-ffmpeg": "^2.1.2",
+    "gl-matrix": "^3.4.3",
     "mux.js": "^6.3.0",
     "redis": "^4.6.7"
   }
