--- a/packages/main/tsconfig.json
+++ b/packages/main/tsconfig.json
@@ -15,6 +15,6 @@
     "allowSyntheticDefaultImports": true,
     "noImplicitAny": false,
   },
-  "include": ["src/**/*.ts", "../../types/**/*.d.ts", "../preload/src/CallManager.ts"],
+  "include": ["src/**/*.ts", "../../types/**/*.d.ts"],
   "exclude": ["**/*.spec.ts", "**/*.test.ts"]
 }
